Edit P1C3 do while loop concept.

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
@@ -325,7 +325,7 @@ The following diagram shows the C# syntax for a while loop.
 ![While loop syntax.](./images/while-loop.png)
 :::
 
-In C# the while loop starts with the `while` keyword followed by the condition within parenthesis. The statement that is repeated follows this, which in almost all cases will be a [compound statement](../02-0-compound-statement).
+In C# the while loop starts with the `while` keyword followed by the condition within parenthesis. The statement to be repeated follows this, which in almost all cases will be a [compound statement](../02-0-compound-statement).
 
 ## How does `while` work?
 
