--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
@@ -31,30 +31,46 @@ import reversedForLoopSlide10 from './images/control-flow-statements-in-depth/co
 
 There is one other loop that we need to look at: the **for loop**.
 
-The for loop is a pre-test loop, basically a specialised version of the while loop. It can do many things in C#, but it is mainly used to repeat a block of code a set number of times. You can think of it like a counting loop, with it counting from a start value to an end value. The for loop has a **control variable** that has the number of times the loop has currently run, which the loop can use to test when it is looking to see if it should end.
+The for loop is another pre-test loop.
+It is basically a specialised version of the [while](../04-1-while-loop) loop, and is mainly used to repeat a block of code a set number of times. You can think of it like a counting loop, with it counting from a start value to an end value. The for loop has a **control variable** that stores the number of times the loop has currently run, which the loop uses to see if it should end.
+
+{/* TODO: concept image for this? */}
+
+## `For` -- when, why, and how
+
+The for loop itself is controlled by three aspects: an initialiser, condition, and post-loop increment.
+
+- The **initialiser** appears first in the parenthesis after the `for` keyword. This is used to set the initial value for the control variable (usually
+`i` as we have [noted before](../04-1-while-loop#counting-with-while)). If you were using a while loop, this code would appear before the start of the loop.
+- The **condition** is the expression used to determine if the body of the loop should run. This would be the same as the condition in an equivalent while loop.
+- The **post-loop increment** updates the control variable. This code runs **after** the body of the loop. In an equivalent while loop, this would be the increment of the control variable at the end of the body in the while loop.
+
+Any time you have some code that you want to repeat a set number of times, a for loop is most likely what you want to use. It provides you with the mechanics you need to achieve this in a more compact and clear format than a while loop.
 
 ## In C#
 
-The for loop itself is controlled by three aspects: the initialiser, condition, and increment. 
+{/* TODO: syntax diagram for this? */}
 
-- The **initialiser** appears first in the parenthesis after the `for` keyword. This is used to set the initial value for the control variable (usually
-`i` as we have noted before). If you were using a while loop, this code would appear before the start of the loop.
-- The **condition** is the expression used to determine if the body of the loop should run. This would be the same as the condition in an equivalent while loop.
-- The last code in the parenthesis is the **post-loop increment**, this updates the control variable and runs **after** the body of the loop. In an equivalent while loop, this would be the increment of the control variable at the end of the body in the while loop.
+The standard format of a for loop is: `for (i = 0; i < size; i++) {...}`. This can be read in parts as:
 
-## For - Why, When, and How
+- for `i`, starting at 0 (the initialiser)
+- while `i` is less than `size`, do the body of the loop (the condition)
+- then increment `i` (using `i++`) (the post-loop increment)
 
-The standard format of a for loop is: `for(i = 0; i < size; i++)\{...\}`. This can be read in parts as:
+This will then give you a loop that runs `size` times.
 
-- for `i`, starting at 0
-- while `i` is less than `size`, do the body of the loop
-- then increment `i` (using `i++`).
+The example above (`for (i = 0; i < size; i++) {...}`) assumes that the variable `i` has already been declared.
+Many languages, including C#, allow you to declare loop's control variable within the loop itself, not just initialise it.
+This is the most common way control variables are created, and neatly packages all of the loop's data within the loop structure.
+Using this approach, our previous example would become `for (int i = 0; i < size; i++) {...}`.
 
-This will then give you a loop that runs `size` times - with i going from 0 to `size` where it terminates the loop.
+You can tweak all three elements of a `for` loop.
+For example, there is no restriction on what value the control variable can be initialised to (assuming it's a valid value for the variable's data type).
+Similarly, the condition of a `for` loop can be any valid expression.
+Lastly, the post-loop increment can be any assignment statement.
+For example, you can count backwards, or in increments of 2.
 
-Any time you have a loop where you want to repeat a set number of times, the for loop is the statement you are most likely to want to use. It provides you with the mechanics you need to achieve this, and the standard format for the loop is usually what you are after. You can also tweak aspects to do things like count backwards or loop from a value other than 0.
-
-## How does for work?
+## How does `for` work?
 
 The example we used for the [while loop](../04-1-while-loop) was a counting loop, so it is perfect to transform to a for loop. The looping part of this example is shown below, with comments pointing out the three aspects we need to code into the for loop.
 
