--- a/src/content/docs/book/part-0-getting-started/00-introduction.mdx
+++ b/src/content/docs/book/part-0-getting-started/00-introduction.mdx
@@ -3,6 +3,11 @@ title: Introduction
 sidebar:
   order: 0
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="MFuJC_VQQ6k" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 ## Welcome to the Programmer's Field Guide
 
