Add videos for P0 and start of P1

--- a/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
+++ b/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
@@ -1,6 +1,11 @@
 ---
 title: Overview of Programs as Instructions
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="fQbKZoxILoo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Part 0 has helped us set the stage for the first leg of our journey, in which we will explore **programs as instructions**.
 As we saw in [Digital Realities](../part-0-getting-started/1-digital-realities/0-overview), programming is about building abstractions.
