--- a/src/content/docs/book/part-0-getting-started/3-building-programs/0-overview.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: Building Programs Overview
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="HpnWZtD25Eo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 The first two legs of our journey have taken us to two quite different sites: digital realities, and using the terminal and shell.
 Our next step is to bring these together and see how we can use programming tools through the terminal and shell to build and run our own digital realities.
